--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../FullStack\\ Open\\ 2022/osa2/puhelinluettlo && npm run build && cp -r build ~/Documents/study/FSO2022_p3 && cd ~/Documents/study/FSO2022_p3",
     "deploy": "fly deploy",
-    "deploy:full": "npm run build:ui && npm run deploy",    
+    "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs"
   },
   "repository": {
@@ -25,6 +25,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^6.6.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
